# Ainulindale

./: CMakeLists.txt  LICENSE  Makefile  launch.sh  linker_script.ld  main.asm  uart_demo.sh
demo/uart/: bridge.h  gpio.h  main.c  uart.c
toolchain/: osx_brew_llvm_baremetal.cmake
